--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
       gtag('config', 'G-BKN0PM1J6W');
     </script>
-    <title>Multilingual Medical Instructional Video Question Answering Challenge</title>
+    <title>Multi-modal, Multilingual, and Multi-hop Medical Instructional Video Question Answering Challenge</title>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav">
-        <div class="container"><a href="/" class="navbar-brand">MMIVQA</a>
+        <div class="container"><a href="/" class="navbar-brand">M4IVQA</a>
             <ul class="navbar-nav mr-auto order-1">
                 <li class="nav-item"><a class="nav-link" href="#challenge">Overview</a></li>
                 <li class="nav-item"><a class="nav-link" href="#dataset">Dataset</a></li>
@@ -38,6 +38,7 @@
                 <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#reference">Reference</a></li>
                 <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard2024</a></li>
+                <li class="nav-item"><a class="nav-link" href="./leaderboard2.html">Leaderboard2025</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="./leaderboardb.html">LeaderboardB</a></li> -->
 <!--                TODO leaderboard-->
             </ul>
@@ -57,9 +58,9 @@
             <div class="title-text-box">
 
                 
-                <h3 class="display-5 text-bold">Multilingual Medical Instructional Video Question Answering Challenge</h3>
-                <h5 class="text-regular">held in NLPCC 2024</h5>
-                                <img src="./img_cmivqa/mmivqa.png" width=100%>
+                <h3 class="display-5 text-bold">Multi-modal, Multilingual, and Multi-hop Medical Instructional Video Question Answering Challenge</h3>
+                <h5 class="text-regular">held in NLPCC 2025</h5>
+                                <img src="./img_cmivqa/NLPCC_2025.jpg" width=100%>
             </div>
             
             <br>
@@ -74,13 +75,13 @@
                         <embed src="./img_cmivqa/prize.svg" type="image/svg+xml" class="mr-3 align-self-center" width=40/>
                         <div class="media-body">
                           <h5 class="mt-0">Challenge Overview</h5>
-                          Multilingual Medical Instructional Video Question Answering Challenge
+                          Multi-modal, Multilingual, and Multi-hop Medical Instructional Video Question Answering Challenge
                         </div>
                       </div>
                     <p class="card-text">
-                        Recently, the advent of online videos has revolutionized the way in which information or knowledge is obtained [1]. Many people find instructional videos an effective and efficient way to teach or learn how to complete a specific task through a series of step-by-step procedures [2]. In this context, a new task called Temporal Answering Grounding in Video (TAGV) is proposed to find the video frame span (visual answer) corresponding to the input question. However, current TAGV dataset was created for a single language (i.e., English or Chinese), it is also important to include the development of multilingual applications. To promote research on TAGV, we propose the Multilingual Medical Instructional Video Question Answering (MMIVQA) challenge. The datasets for this challenge contain high-quality Chinese and English medical instructional videos, with manual annotations provided by medical experts. The MMIVQA challenge includes three tracks, namely Track 1, Multilingual Temporal Answering Grounding in Single Video (mTAGSV), Track 2 Multilingual Video Corpus Retrieval, mVCR) and multilingual Temporal Answering Grounding in Video Corpus (mTAGVC). The ultimate goal of this joint task is to develop a system that can provide multilingual Q&A function with moment-to-moment video clips for first aid, medical emergencies or medical education.
+                        Designing models that can comprehend multi-modal (text, speech, and image/video) instructional video in the medical domain, process multilingual data, and locate multi-hop questions in the video is an emerging challenge. Following the successful hosts of the 1-st (NLPCC 2023 Foshan) and the 2-rd (NLPCC 2024 Hangzhou) CMIVQA challenges, this year, a new task has been introduced to further advance research in multi-modal, multilingual, and multi-hop (m^3) question answering systems, with a specific focus on medical instructional videos. This task focuses on evaluating models that can integrate information from medical instructional videos, understand multiple languages, and answer complex, multi-hop questions that require reasoning over various modalities.  Participants are expected to develop algorithms capable of processing both video and text data, understanding multilingual queries, and providing relevant answers to multi-hop medical questions. Models will be evaluated on the relevance of their answers, as well as their ability to handle complex multi-modal and multilingual inputs. 
                     </p>
-                    <p class="card-text">This grand challenge includes three tracks: Multilingual Temporal Answer Grounding in Singe Video (mTAGSV), Multilingual Video Corpus Retrieval (mVCR) and Multilingual Temporal Answer Grounding in Video Corpus (mTAGVC).</p>
+                    <p class="card-text">The task consists of multiple stages, including training, testing, and evaluation, which contains three tracks: multi-modal, multilingual, and multi-hop Temporal Answer Grounding in Singe Video (m^3TAGSV), multi-modal, multilingual, and multi-hop Video Corpus Retrieval (m^3VCR) and multi-modal, multilingual, and multi-hop Temporal Answer Grounding in Video Corpus (m^3TAGVC).</p>
 
                     <center><img src="./img_cmivqa/track1.png" width=90%></center>
                     <div>
@@ -135,7 +136,7 @@
                     <a href="https://github.com/WENGSYX/MMIVQA_Baseline">https://github.com/Lireanstar/NLPCC2024_MMIVQA</a>.
                         </br>
                         </br>
-                        Our baseline method will be released in <a href="https://github.com/WENGSYX/MMIVQA_Baseline">https://github.com/WENGSYX/MMIVQA_Baseline</a>. 
+                        Our baseline method will be released in <a href="https://github.com/WENGSYX/MMIVQA_Baseline">https://github.com/WENGSYX/CMIVQA_Baseline</a>. 
                         </br>
                         Any original methods (language/vision/audio/multimodal etc.) are welcome.
                    </p>
@@ -216,7 +217,7 @@
 <!--                        <strong>Train+Valid+Test Set:</strong> <a href="https://1drv.ms/u/s!Ag220j2nXkVswCSUXjTP_cA3Y0y2?e=9b3VXA" target="_blank">OneDrive</a><br/>-->
                         <strong>Train Set:</strong> <a href="https://pan.baidu.com/s/1eN_mo3iHyyHVH_8dciElqA?pwd=9871">BaiduNetDisk</a> <br/>
                         <strong>Dev Set:</strong> <a href="https://pan.baidu.com/s/1G1u-nnOm50_d3cl-vcqimQ?pwd=9871">BaiduNetDisk</a> <br/>
-                         <strong>Test Set:</strong> <a href="https://pan.baidu.com/s/17g65_HhK5Oq3h7WmPCUvog?pwd=9871 ">BaiduNetDisk</a> <br/>                       
+                         <strong>Test Set:</strong> <a href="https://pan.baidu.com/s/15WCJmm3MgB6b8HFKIki8ag?pwd=9871">BaiduNetDisk</a> <br/>                       
                         <!-- <strong>Train & Validation Set:</strong> <a href="https://pan.baidu.com/s/1eN_mo3iHyyHVH_8dciElqA?pwd=9871">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1QbY8DEaVLkY2w6vOCWAs4ZQFHgJ3q8ui?usp=sharing">GoogleDrive</a><br/> -->
 
 <!--                         <strong>Test Set A:</strong> <a href="https://pan.baidu.com/s/1XxoQ-KwUy9qf3Z0RfaPTaw?pwd=9874">BaiduNetDisk</a> | <a href="https://drive.google.com/drive/folders/1Fdll0Qn8Ol65Z91u51NOEpBoxAQlrXN4?usp=sharing">GoogleDrive</a> <br/> -->
@@ -354,7 +355,7 @@
                     <div class="alert alert-dark" role="alert">
                         <h4 class="alert-heading">Terms and Conditions</h4>
 <!--                        <p>The dataset users have requested permission to use the MMIVQA database. In exchange for such permission, the users hereby agree to the following terms and conditions:</p>-->
-<!--                        <p>The dataset users should submit a request (<a href="./MMIVQA_Dataset_Download_Agreement.docx" target="_blank">Dataset Agreement to <b>libincn@hnu.edu.cn</b></a>) for permission to use the MMIVQA dataset. In exchange for such permission, the users hereby agree to the following terms and conditions:</p>-->
+<!--                        <p>The dataset users should submit a request (<a href="./CMIVQA_Dataset_Download_Agreement.docx" target="_blank">Dataset Agreement to <b>libincn@hnu.edu.cn</b></a>) for permission to use the MMIVQA dataset. In exchange for such permission, the users hereby agree to the following terms and conditions:</p>-->
                         <p>The dataset users have requested permission to use the MMIVQA dataset. In exchange for such permission, the users hereby agree to the following terms and conditions:</p>
                         <hr>
                         <ul>
@@ -438,7 +439,7 @@
                     <br/><b>Note:</b> The main ranking of this track is based on the Average score. The Average score is calculated by averaging the R@1|mIoU, R@10|mIoU, R@50|mIoU scores, which is shown as follows.
                     where A and B represent different spans.<br/>
                      $$
-                    \text { Average }=\frac{1}{|M'|} \sum_{i=1}^{|M'|} {\text { Value}_i}
+                    \text { Average }=\frac{1}{|M'|} \sum_{i=1}^{|M'|} \frac{1}{\text { Value}_i}
                     $$
                          where the |<i>M</i><sup>'</sup>| is the number of the evaluation metrics. Value<sub>i</sub> is the value of the i-th metric (i.e., R@1|mIoU, R@10|mIoU, R@50|mIoU), |<i>M</i><sup>'</sup>|=3.
 <!--                            <li><strong>generation quality (image level)</strong>: SSIM, CPBD, PSNR</li>-->
