--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         </div>
                       </div>
                     <p class="card-text">
-                        Designing models that can comprehend multi-modal (text, speech, and image/video) instructional video in the medical domain, process multilingual data, and locate multi-hop questions in the video is an emerging challenge. Following the successful hosts of the 1-st (NLPCC 2023 Foshan) and the 2-rd (NLPCC 2024 Hangzhou) CMIVQA challenges, this year, a new task has been introduced to further advance research in multi-modal, multilingual, and multi-hop (m^3) question answering systems, with a specific focus on medical instructional videos. This task focuses on evaluating models that can integrate information from medical instructional videos, understand multiple languages, and answer complex, multi-hop questions that require reasoning over various modalities.  Participants are expected to develop algorithms capable of processing both video and text data, understanding multilingual queries, and providing relevant answers to multi-hop medical questions. Models will be evaluated on the relevance of their answers, as well as their ability to handle complex multi-modal and multilingual inputs. 
+                        Designing models that can comprehend multi-modal (text, speech, and image/video) instructional video in the medical domain, process multilingual data, and locate multi-hop questions in the video is an emerging challenge. Following the successful hosts of the 1-st (NLPCC 2023 Foshan) and the 2-rd (NLPCC 2024 Hangzhou) CMIVQA challenges, this year, a new task has been introduced to further advance research in multi-modal, multilingual, and multi-hop medical (M4) question answering systems, with a specific focus on medical instructional videos. This task focuses on evaluating models that can integrate information from medical instructional videos, understand multiple languages, and answer complex, multi-hop questions that require reasoning over various modalities.  Participants in M4IVQA are expected to develop algorithms capable of processing both video and text data, understanding multilingual queries, and providing relevant answers to multi-hop medical questions. Models will be evaluated on the relevance of their answers, as well as their ability to handle complex multi-modal and multilingual inputs. 
                     </p>
-                    <p class="card-text">The task consists of multiple stages, including training, testing, and evaluation, which contains three tracks: multi-modal, multilingual, and multi-hop Temporal Answer Grounding in Singe Video (m^3TAGSV), multi-modal, multilingual, and multi-hop Video Corpus Retrieval (m^3VCR) and multi-modal, multilingual, and multi-hop Temporal Answer Grounding in Video Corpus (m^3TAGVC).</p>
+                    <p class="card-text">The task consists of multiple stages, including training, testing, and evaluation, which contains three tracks: multi-modal, multilingual, and multi-hop Temporal Answer Grounding in Singe Video (M4TAGSV), multi-modal, multilingual, and multi-hop Video Corpus Retrieval (M4VCR) and multi-modal, multilingual, and multi-hop Temporal Answer Grounding in Video Corpus (M4TAGVC).</p>
 
                     <center><img src="./img_cmivqa/track1.png" width=90%></center>
                     <div>
@@ -472,29 +472,29 @@
                     <p>During the training and verification phases, we released the complete data set (including corresponding labels) for the participating teams to freely choose their models. During the test set release phase, we will release additional test sets and will maintain the frequency of updating the online list every day. Participants can submit their results to the competition organizer via <a href="libincn@hnu.edu.cn">E-mail</a> for result registration, and each team does not exceed 5 submissions in total.</p>
                     <table class="table table-striped table-bordered">
                         <tbody>
-                          <tr>
+                                 <tr>
                             <td>Announcement of shared tasks and Registration open for participation</td>
-                            <td>March 25, 2024</td>
+                            <td>Feb. 17, 2025</td>
                           </tr>
                           <tr>
                             <td>Release of detailed task guidelines & training data</td>
-                            <td>April 15, 2024</td>
+                            <td>Feb. 28, 2025</td>
+                          </tr>
+                            <tr>
+                            <td>Registration deadline </td>
+                            <td>March 25, 2025</td>
                           </tr>
                           <tr>
                             <td>Release of test data</td>
-                            <td>June 11, 2024</td>
+                            <td>April 11, 2025</td>
                           </tr>
                           <tr>
-                            <td>Test submission deadline</td>
-                            <td>June 20, 2024</td>
-                          </tr>
-                          <tr>
-                            <td>Registration deadline (Same as the Test submission deadline)</td>
-                            <td>June 20, 2024</td>
+                            <td>Participants results submission deadline;</td>
+                            <td>April 20, 2025</td>
                           </tr>
                           <tr>
                             <td>Evaluation results release and call for system reports and conference paper</td>
-                            <td>June 30, 2024</td>
+                            <td>April 30, 2025</td>
                           </tr>
                         </tbody>
                     </table>
@@ -509,7 +509,7 @@
                         <embed src="./img_cmivqa/orgnizer.svg" type="image/svg+xml" class="mr-3 align-self-center" width=40/>
                         <div class="media-body">
                           <h5 class="mt-0">Organizers</h5>
-                          Organizers of this Chinese Medical Instructional Video Question Answering Challenge
+                          Organizers of this  M4 Instructional Video Question Answering Challenge
                         </div>
                       </div>
                     <div class="row">
@@ -523,16 +523,16 @@
                             <p class="orgnizer-text">Bin Li<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div>
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/song.jpg" class="rounded-circle orgnizer-img" width=105/>
-                            <p class="orgnizer-text">Qiya Song<br>Hunan Normal University</p>
+                            <img src="./img_cmivqa/an.jpg" class="rounded-circle orgnizer-img" width=105/>
+                            <p class="orgnizer-text">Shenxi Liu<br>School of Computer Science and Technology, Beijing Institute of Technology</p>
                         </div>
 <!--                         <div class="col orgnizer-box">
                             <img src="./img_cmivqa/sunbin.jpg" class="rounded-circle orgnizer-img" width=100/>
                             <p class="orgnizer-text">Bin Sun<br>College of Electrical and Information Engineering, Hunan University</p>
                         </div> -->
                         <div class="col orgnizer-box">
-                            <img src="./img_cmivqa/min.jpg" class="rounded-circle orgnizer-img" width=95/>
-                            <p class="orgnizer-text">Xianwen Min<br>School of Robotics, Hunan University</p>
+                            <img src="./img_cmivqa/an.jpg" class="rounded-circle orgnizer-img" width=95/>
+                            <p class="orgnizer-text">Yixuan Weng<br>Westlake University</p>
                         </div>
                 </div>
             </div>
@@ -543,10 +543,10 @@
                         <embed src="./img_cmivqa/icon-paper.svg" type="image/svg+xml" class="mr-3 align-self-center" width=40/>
                         <div class="media-body">
                           <h5 class="mt-0-vico">References</h5>
-                          Some related works of the Chinese Medical Instructional Video Question Answering Challenge.
+                          Some related works of the M4 Instructional Video Question Answering Challenge.
                         </div>
                       </div>
-                    <div id=ref1>[1] <i>Li, Bin, et al. “Towards visual-prompt temporal answering grounding in medical instructional video.” arXiv preprint arXiv:2203.06667 (2022). </i></div>
+                    <div id=ref1>[1] <i>Shutao Li, Li, Bin, et al. “Towards visual-prompt temporal answer grounding in instructional video.” IEEE Transactions on Pattern Analysis and Machine Intelligence (2024). </i></div>
                     <div id=ref2>[2] <i>Weng, Yixuan, and Bin Li. “Visual Answer Localization with Cross-modal Mutual Knowledge Transfer.” ICASSP 2023 - 2023 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP), Rhodes Island, Greece, 2023, pp. 1-5, doi: 10.1109/ICASSP49357.2023.10095026.</i></div>
                     <div id=ref3>[3] <i>Deepak Gupta, Kush Attal, and Dina Demner-Fushman. “A Dataset for Medical Instructional Video Classification and Question Answering.” arXiv preprint arXiv:2201.12888, 2022. </i></div>
                     <div id=ref4>[4] <i>Deepak Gupta, and Dina Demner-Fushman. “Overview of the MedVidQA 2022 Shared Task on Medical Video Question-Answering. ” BioNLP 2022@ ACL 2022 (2022): 264.</i></div>
