--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li class="nav-item"><a class="nav-link" href="#award">Award</a></li>
                 <li class="nav-item"><a class="nav-link" href="#organizers">Organizers</a></li>
                 <li class="nav-item"><a class="nav-link" href="#reference">Reference</a></li>
-                <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard2024</a></li>
+<!--                 <li class="nav-item"><a class="nav-link" href="./leaderboard.html">Leaderboard2024</a></li> -->
                 <li class="nav-item"><a class="nav-link" href="./leaderboard2.html">Leaderboard2025</a></li>
                 <!-- <li class="nav-item"><a class="nav-link" href="./leaderboardb.html">LeaderboardB</a></li> -->
 <!--                TODO leaderboard-->
