--- a/leaderboard2.html
+++ b/leaderboard2.html
@@ -76,9 +76,25 @@
                         <td>R@1,IoU=0.5</td>
                         <td>R@1,IoU=0.7</td>
                                   <td><b>mIoU(R@1)</b></td>
+
                        <tr>
 
                             <td>1 </td>
+                            <td>2025/4/30</td>
+                            <td>Baichuan</td>
+                            <td>Sichuan University</td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">0.5133</font></td>
+                            <td><font color="black">0.3612</font></td>
+                            <td><font color="black">0.2103</font></td>
+                            <td><font color="black">0.3717</font></td>
+
+                        </tr>
+
+
+                       <tr>
+
+                            <td>2 </td>
                             <td>2024/6/20</td>
                             <td>Ouc_AI</td>
                             <td>The Open University of China</td>
@@ -89,10 +105,9 @@
                             <td><font color="black">0.3637</font></td>
 
                         </tr>
-
                        <tr>
 
-                            <td>2 </td>
+                            <td>3 </td>
                             <td>2024/6/20</td>
                             <td>SETAG</td>
                             <td>Fudan University</td>
@@ -103,9 +118,22 @@
                             <td><font color="black">0.3389</font></td>
 
                         </tr>
+                                               <tr>
+
+                            <td>4 </td>
+                            <td>2025/4/30</td>
+                            <td>SEU</td>
+                            <td>Southeast University</td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">0.4719</font></td>
+                            <td><font color="black">0.3314</font></td>
+                            <td><font color="black">0.1973</font></td>
+                            <td><font color="black">0.3411</font></td>
+
+                        </tr>
                        <tr>
 
-                            <td>3 </td>
+                            <td>5 </td>
                             <td>2024/6/20</td>
                             <td>BIGG</td>
                             <td>YNU</td>
@@ -118,7 +146,7 @@
                         </tr>
                        <tr>
 
-                            <td>4 </td>
+                            <td>6 </td>
                             <td>2024/6/20</td>
                             <td>PIPINSTALL</td>
                             <td>SEU</td>
@@ -132,7 +160,7 @@
                          
                        <tr>
 
-                            <td>5 </td>
+                            <td>7 </td>
                             <td>2024/5/10</td>
                             <td>-</td>
                             <td>-</td>
@@ -162,9 +190,33 @@
                                 <td>MRR</td>
                             <td><b>Overall</b></td>
                             </tr>
-                               
-                            <tr>
+                               <tr>
                                 <td>1</td>
+                                <td>2025/4/30</td>
+                                <td>DIMA</td>
+                                <td>University of Pittsburgh</td>
+                                <td><font color="black">-</font></td>
+                                <td><font color="black">0.3264</font></td>
+                                <td><font color="black">0.4211</font></td>
+                                <td><font color="black">0.5177</font></td>
+                                <td><font color="black">0.3407</font></td>
+                                <td><b><font color="black">1.6059</font></b></td>
+                            </tr>                             
+                             <tr>
+                                <td>2</td>
+                                <td>2025/4/30</td>
+                                <td>NYU</td>
+                                <td>New York University</td>
+                                <td><font color="black">-</font></td>
+                                <td><font color="black">0.3213</font></td>
+                                <td><font color="black">0.4137</font></td>
+                                <td><font color="black">0.5104</font></td>
+                                <td><font color="black">0.3354</font></td>
+                                <td><b><font color="black">1.5808</font></b></td>
+                            </tr>
+
+                            <tr>
+                                <td>3</td>
                                 <td>2024/6/20</td>
                                 <td>sun</td>
                                 <td>CETC</td>
@@ -175,8 +227,21 @@
                                 <td><font color="black">0.3245</font></td>
                                 <td><font color="black">1.5410</font></td>
                             </tr>
+
+                             <tr>
+                                <td>4</td>
+                                <td>2025/4/30</td>
+                                <td>Wjh</td>
+                                <td>YNU</td>
+                                <td><font color="black">-</font></td>
+                                <td><font color="black">0.2744</font></td>
+                                <td><font color="black">0.3312</font></td>
+                                <td><font color="black">0.4117</font></td>
+                                <td><font color="black">0.2551</font></td>
+                                <td><b><font color="black">1.2724</font></b></td>
+                            </tr>
                             <tr>
-                                <td>2</td>
+                                <td>5</td>
                                 <td>2024/6/20</td>
                                 <td>GEN</td>
                                 <td>-</td>
@@ -189,7 +254,7 @@
                             </tr>
 
                             <tr>
-                                <td>2</td>
+                                <td>6</td>
                                 <td>2024/5/10</td>
                                 <td>-</td>
                                 <td>-</td>
@@ -217,8 +282,36 @@
                             <td>R@50|mIoU</td>
                             <td><b>Average</b></td>
                         </tr>
- <tr>
+
+
+
+                          <tr>
                             <td>1</td>
+                            <td>2025/4/30</td>
+                            <td>MedEcho</td>
+                            <td>Wuhan University</td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">0.1284</font></td>
+                            <td><font color="black">0.2417</font></td>
+                            <td><font color="black">0.3243</font></td>
+                            <td><font color="black">0.2314</font></td>
+
+                         </tr>
+
+                          <tr>
+                            <td>2</td>
+                            <td>2025/4/30</td>
+                            <td>NYU</td>
+                            <td>New York University</td>
+                            <td><font color="black">-</font></td>
+                            <td><font color="black">0.1202</font></td>
+                            <td><font color="black">0.2366</font></td>
+                            <td><font color="black">0.3133</font></td>
+                            <td><font color="black">0.2233</font></td>
+
+                         </tr>
+ <tr>
+                            <td>3</td>
                             <td>2024/6/20</td>
                             <td>IIEleven</td>
                             <td>University of Chinese Academy of Sciences</td>
@@ -231,7 +324,7 @@
                          </tr>
 
                         <tr>
-                            <td>2</td>
+                            <td>4</td>
                             <td>2024/5/10</td>
                             <td>-</td>
                             <td>-</td>
