--- a/leaderboard2.html
+++ b/leaderboard2.html
@@ -200,7 +200,7 @@
                                 <td><font color="black">0.4211</font></td>
                                 <td><font color="black">0.5177</font></td>
                                 <td><font color="black">0.3407</font></td>
-                                <td><b><font color="black">1.6059</font></b></td>
+                                <td><font color="black">1.6059</font></td>
                             </tr>                             
                              <tr>
                                 <td>2</td>
@@ -212,7 +212,7 @@
                                 <td><font color="black">0.4137</font></td>
                                 <td><font color="black">0.5104</font></td>
                                 <td><font color="black">0.3354</font></td>
-                                <td><b><font color="black">1.5808</font></b></td>
+                                <td><font color="black">1.5808</font></td>
                             </tr>
 
                             <tr>
@@ -238,7 +238,7 @@
                                 <td><font color="black">0.3312</font></td>
                                 <td><font color="black">0.4117</font></td>
                                 <td><font color="black">0.2551</font></td>
-                                <td><b><font color="black">1.2724</font></b></td>
+                                <td><font color="black">1.2724</font></td>
                             </tr>
                             <tr>
                                 <td>5</td>
